// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvaluationOrderStatusPage should render view correctly on cancelled payment 1`] = `
<div
  className="public-evaluation-order-status-page MuiBox-root css-0"
>
  <div
    className="public-evaluation-order-status-page__heading"
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      style={{}}
    >
      Maksu keskeytyi
    </h1>
    <div
      className="header-separator MuiBox-root css-0"
    />
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-1gtchvp-MuiPaper-root"
    style={
      {
        "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
      }
    }
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      style={{}}
    >
      Voit yrittää maksua uudestaan. Käsittelemme vain maksetut tarkistusarviointipyynnöt.
    </p>
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
      href="/yki/ilmoittautuminen"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Takaisin aloitussivulle
    </a>
  </div>
</div>
`;

exports[`EvaluationOrderStatusPage should render view correctly on payment error 1`] = `
<div
  className="public-evaluation-order-status-page MuiBox-root css-0"
>
  <div
    className="public-evaluation-order-status-page__heading"
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      style={{}}
    >
      Maksu epäonnistui
    </h1>
    <div
      className="header-separator MuiBox-root css-0"
    />
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-1gtchvp-MuiPaper-root"
    style={
      {
        "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
      }
    }
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      style={{}}
    >
      Tarkistusarviointimaksun maksaminen ei onnistunut. Yritä maksua uudestaan.
    </p>
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
      href="/yki/ilmoittautuminen"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Takaisin aloitussivulle
    </a>
  </div>
</div>
`;

exports[`EvaluationOrderStatusPage should render view correctly on successful payment 1`] = `
<div
  className="public-evaluation-order-status-page MuiBox-root css-0"
>
  <div
    className="public-evaluation-order-status-page__heading"
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      style={{}}
    >
      Olet pyytänyt tarkistusarviointia!
    </h1>
    <div
      className="header-separator MuiBox-root css-0"
    />
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-1gtchvp-MuiPaper-root"
    style={
      {
        "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
      }
    }
  >
    <div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        style={{}}
      >
        Tutkinto
        :
         
        <b>
          suomi, keskitaso
        </b>
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        style={{}}
      >
        Testipäivä
        :
         
        <b>
          10/11/2023
        </b>
      </p>
    </div>
    <p
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      style={{}}
    >
      Sinulle on lähetetty vahvistus tarkistusarviointipyynnöstäsi sähköpostilla. Sähköpostissa on myös kuitti tarkistusarviointimaksustasi. Jos et ole saanut viestiä, tarkista roskapostikansiosi.
    </p>
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
      href="/yki/ilmoittautuminen"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Takaisin aloitussivulle
    </a>
  </div>
</div>
`;
